--- a/NMR/protocoll/NMR_protocol_title.tex
+++ b/NMR/protocoll/NMR_protocol_title.tex
@@ -34,16 +34,16 @@ Christian \textsc{Siegel}
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisor:} \\
-Samata \textsc{Chaudhur} % Supervisor's Name
+Rajib \textsc{Sarkar} % Supervisor's Name
 \end{flushright}
 \end{minipage}\\[4cm]
 
 %----------------------------------------------------------------------------------------
-%	DATE SECTION
+%	DATE SECTION  
 %----------------------------------------------------------------------------------------
 
 {\large Dresden,\selectlanguage{english} \today}\\ % Date, change the \today to a set date if you want to be precise
-{\large Date of experimental procedure: November 20, 2015}\\[3cm]
+{\large Date of experimental procedure: November 19th, 2015}\\[3cm]
 
 
 \vfill 
