--- a/NMR/protocoll/NMR_protocol_discussion.tex
+++ b/NMR/protocoll/NMR_protocol_discussion.tex
@@ -1,6 +1,6 @@
 \section{Discussion and conclusions}
 	In the experiment the relaxation times $T_1$ and $T_2$ of an $^{57}$Fe spin ensemble were determined. The errors of the measurement are dominated by the deviation of the fits shown in the figures \ref{T1} and \ref{T2} that are because of the strong spreading relatively large. They could be reduced by taking several measurements for one constant value of the $\tau$ and $\Delta t$ time-variables. There also could be more abscissa-values for the fits all in all. The parameters one could choose in the measurement-software could also be improved.\\
-	In the experiment we learned something about the behaviour of nuclear spins interacting with each other. The measured relaxation time-constants are strongly dependant on the environment where the spins are built-in such that the measurement of the relaxation-times provide the approach to investigate chemical bonds between atoms. In medical applications this fact is used to distinguish between tissues in Magnetic Resonance Tomography. There the nuclear spin of the hydrogen-atoms that are found in almost all organic molecules we are made of is used. Different organs and tissues consist of different organic structures so that the interaction of the hydrogen-spins with their environment is strongly depends on their location. Damadian showed in 1970 that relaxation-times of hydrongen within tumour-tissue are significantly larger than in their healthy counterparts. One reason for that is the increased water-ratio in the disseased tissue.\cite{t1Med} Table (\ref{t1_mrt}) shows this effect.\\
+	In the experiment we learned something about the behaviour of nuclear spins interacting with each other. The measured relaxation time-constants are strongly dependant on the environment where the spins are built-in such that the measurement of the relaxation-times provide the approach to investigate chemical bonds between atoms. In medical applications this fact is used to distinguish between tissues in Magnetic Resonance Tomography. There the nuclear spin of the hydrogen-atoms that are found in almost all organic molecules we are made of is used. Different organs and tissues consist of different organic structures so that the interaction of the hydrogen-spins with their environment is strongly depends on their location. Damadian showed in 1970 that relaxation-times of hydrongen within tumour-tissue are significantly larger than in their healthy counterparts. One reason for that is the increased water-ratio in the disseased tissue. This differences are used for increasing the contrast in MRT-Images.\cite{t1Med} Table (\ref{t1_mrt}) shows this effect.\\
 	\minipanf
 	\centering
 		\captionsetup{justification=raggedright, margin =4cm} 
