--- a/MMC/protokoll/MMC_protocol_intro.tex
+++ b/MMC/protokoll/MMC_protocol_intro.tex
@@ -3,7 +3,7 @@
 		All life forms in our universe are made of cells. To understand the mechanisms in and between those elementary building blocks of life is a real fundamental aim of biology, biochemistry and biophysics. But understanding these tiny but really complex structures also means understanding thousands of finely tuned mechanisms that are essential for survival of a cell. One necessary condition for most of these processes is a \textit{directional} (not statistical!) motion of cell components. For example the segregation of chromosomes during cell division would not work with brownian motion alone. Fortunately there are so called \textit{motor proteins} as kinesin, dynesin and myosin that are responsible for these kinds of motion appearing in many transport-mechanisms.\\
 		In the following experiment we will investigate \textit{kinesin-1}, a motor protein moving along \textit{microtubule} filaments. For that purpose we will measure their velocity and the mean run length. But at first some basic knowledge.\\
 		\ \\
-		\textbf{Microtubules} (MTs) are a component of the cytoskeleton that can be depicted with the "cell's highway" because they form basically the ground where the motorproteins can walk on. Their basic building blocks are the $\alpha-/\beta$-tubulin heterodimers that polymerise longitudinally in a periodic structure with a repeat-length of $8\ \unit{nm}$. They form a structure of hollow-cylinders having an outer diameter of $25\ \unit{nm}$. Because the binding between the subunits is reversible MTs show a highly dynamic growing behavior that is necessary to build those "roads" as flexible as possible. Later we have to surpress this effect. The directed motion on the MTs is enabled by the structural polarity of the tubulin-dimers. Figure \ref{int:MT} shows the strucuture of the MTs.\cite{PA}\\
+		\textbf{Microtubules} (MTs) are a component of the cytoskeleton that can be depicted with the "cell's highway" because they form basically the ground where the motorproteins can walk on. Their basic building blocks are the $\alpha-/\beta$-tubulin heterodimers that polymerise longitudinally in a periodic structure with a repeat-length of $8\ \unit{nm}$. They form a structure of hollow-cylinders having an outer diameter of $25\ \unit{nm}$. Because of the reversible binding and the hydrolysis of GTP(in figure \ref{int:MT} dyed red) by $\beta$-tubulin MTs show a highly dynamic growing behavior that is necessary to build those "roads" as flexible as possible. Later we have to surpress this effect. The directed motion on the MTs is enabled by the structural polarity of the tubulin-dimers. Figure \ref{int:MT} shows the strucuture of the MTs.\cite{PA}\\
 		\begin{figure}[h]
 		 			\centering
 		 		   	\captionsetup{justification=raggedright, margin =4cm}            
