--- a/Reaktor/Protokoll/RE_Protokoll_experiment.tex
+++ b/Reaktor/Protokoll/RE_Protokoll_experiment.tex
@@ -1,8 +1,7 @@
 \section{Durchführung}
     \subsection{Reaktorstart}
     %TODO Was muss vor Inbetriebnahme beachtet werden? Welche Kontrollleuchten gibt es? Wie funktioniert die Steuerung? Wofür gibt es die Schlüssel? Ertönen Warnsignale und wenn ja, wann und warum? 
-    Vor der Inbetriebnahme des Reaktors sind mehrere sicherheitsrelevante Prüfungen an dosimetrischen und nicht-dosimetrischen Einrichtungen vorzunehmen. Es gibt Geräte, die auf Defekte am Reaktor und der Messtechnik hinweisen. So werden über kleine LED bestimmte Defekte angezeigt. Diese LEDs können ihrerseits ebenfalls defekt sein. Deshalb gibt es einen Schalter, der alle Lampen aktiviert, damit die Sicherheitsleuchten auf Funktionstüchtigkeit überprüft werden können. 
-    Wenn hier keine Fehler vorliegen, können  weitere Sicherheitsprüfungen vorgenommen werden. So muss zum Anfang gesichert werden, dass die Reaktorsicherheitsabschaltung (\glqq RESA\grqq) funktionstüchtig ist, wie auch sämtliche Warnsignale. Ist dies, so wie am Versuchstag der Fall, wird das notiert und der Reaktor kann gestartet werden.
+    Vor der Inbetriebnahme des Reaktors sind mehrere sicherheitsrelevante Prüfungen an dosimetrischen und nicht-dosimetrischen Einrichtungen vorzunehmen. Es gibt Geräte, die auf Defekte am Reaktor und an der Messtechnik hinweisen. So werden über LED bestimmte Defekte angezeigt. Diese können ihrerseits ebenfalls defekt sein. Deshalb gibt es einen Schalter, der alle Lampen aktiviert, damit die Sicherheitsleuchten auf Funktionstüchtigkeit überprüft werden können. Sind alle funktionstüchtig, kann mit den Sicherheitskontrollen fortgefahren werden.
     
     \subsection{Steuerstabkalibrierung}
 
