--- a/Reaktor/Protokoll/RE_Protokoll_experiment.tex
+++ b/Reaktor/Protokoll/RE_Protokoll_experiment.tex
@@ -1,7 +1,8 @@
 \section{Durchführung}
     \subsection{Reaktorstart}
     %TODO Was muss vor Inbetriebnahme beachtet werden? Welche Kontrollleuchten gibt es? Wie funktioniert die Steuerung? Wofür gibt es die Schlüssel? Ertönen Warnsignale und wenn ja, wann und warum? 
-    Vor der Inbetriebnahme des Reaktors sind mehrere sicherheitsrelevante Prüfungen an dosimetrischen und nicht-dosimetrischen Einrichtungen vorzunehmen. Es gibt Geräte, die auf Defekte am Reaktor und an der Messtechnik hinweisen. So werden über LED bestimmte Defekte angezeigt. Diese können ihrerseits ebenfalls defekt sein. Deshalb gibt es einen Schalter, der alle Lampen aktiviert, damit die Sicherheitsleuchten auf Funktionstüchtigkeit überprüft werden können. Sind alle funktionstüchtig, kann mit den Sicherheitskontrollen fortgefahren werden.
+    Vor der Inbetriebnahme des Reaktors sind mehrere sicherheitsrelevante Prüfungen an dosimetrischen und nicht-dosimetrischen Einrichtungen vorzunehmen. Es gibt Geräte, die auf Defekte am Reaktor und an der Messtechnik hinweisen. So werden über LEDs bestimmte Defekte angezeigt. Diese können ihrerseits ebenfalls defekt sein. Deshalb gibt es einen Schalter, der alle Lampen aktiviert, damit die Sicherheitsleuchten auf Funktionstüchtigkeit überprüft werden können. Sind alle funktionstüchtig, kann mit den Sicherheitskontrollen fortgefahren werden.
+    So prüft man weiter, ob alle Kontakte an den Steuerstäben, die jeweils die oberste und unterste Position der Steuerstäbe signalisieren, arbeiten, ob die Reakterschnellabschaltung (RESA) auch ordnungsgemäß funktioniert. Schritt für Schritt arbeitet man so alles ab.
     
     \subsection{Steuerstabkalibrierung}
 
