--- a/Reaktor/Protokoll/RE_Protokoll_main.tex
+++ b/Reaktor/Protokoll/RE_Protokoll_main.tex
@@ -13,6 +13,7 @@
 \usepackage{ziffer}
 \usepackage{units}
 \usepackage{multirow}
+\usepackage{subfigure}
 
 \newcommand{\minipanf}{\begin{minipage}{\linewidth}}
 \newcommand{\minipend}{\end{minipage}}
