--- a/Reaktor/Protokoll/RE_Protokoll_experiment.tex
+++ b/Reaktor/Protokoll/RE_Protokoll_experiment.tex
@@ -78,4 +78,26 @@
 
 
     \subsection{Steuerstabkalibrierung}
-
+		\begin{figure}[hp]
+				\centering
+				\captionsetup{justification=centering}
+				\scalebox{0.6}{
+					\input{pic/diffSSKL_all}
+				}
+				\caption{Differentielle Steuerstabkennlinie. \\
+				Stab 1: rot durchgezogen, Stab 2: schwarz gestrichelt}
+				\label{exp:diffSSKL}
+		\end{figure}
+		
+		\begin{figure}[hp]
+						\centering
+						\captionsetup{justification=centering}
+						\scalebox{0.6}{
+							\input{pic/intSSKL_all}
+						}
+						\caption{Integrale Steuerstabkennlinie. \\
+						Stab 1: grün durchgezogen, Stab 2: rot punkt-strich, Stab 3: schwarz gestrichelt}
+						\label{exp:intSSKL}
+		\end{figure}
+			
+	
